browser/css/cool.css
/* ... */
.align-content-center {
	align-content: center;
}
.justify-content-center {
	justify-content: center;
}

/* Space */
.m-v-0 {
	margin-block: 0;
}

/* Border */
.border-0 {
	border: 0 !important;
}

/* clip technique: hide visually but keep it available to screen readers */
.visuallyhidden {
	border: 0;
	clip: rect(0 0 0 0);
	height: 1px;
	margin: -1px;
	overflow: hidden;
	padding: 0;
	position: absolute;
	width: 1px;
}
[data-docType='spreadsheet'] #document-container.readonly.mobile {
	top: 36px;
	position: fixed;
}
#document-container {
	font-family: var(--cool-font);
	background-color: var(--color-main-background);
	position: relative;
	margin: 0;
	padding: 0;
	width: 100%;
	flex: 1;
	display: block;
	height: 100%;
}

.color-palette-selector {
	margin: 0 5px !important;
}

.color-palette-selector > select {
	width: 100% !important;
	padding: 0 14px 0 4px;
	height: 28px;
	font-size: var(--default-font-size);
	font-family: var(--jquery-ui-font);
}

#toolbar-wrapper.readonly {
	display: none;
}

#map {
	position: absolute;
	top: 0px;
	bottom: 0px;
	left: 0px;
	right: 0px;
	z-index: 10;
	cursor: auto;
	background-color: transparent;
	margin: 0;
}

.leaflet-progress-layer {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	z-index: 1000;
	background-color: var(--color-main-background);
	padding: 20px;
	border-radius: 8px;
}

.bucket-cursor {
	cursor: url('images/cursors/fill.png') 4 18, auto !important;/*setting coordinates to align the tip of the brush icon */
}
.cool-scrollbar-show {
	opacity: 1 !important;
	filter: 'alpha(opacity=100)' !important;
	-ms-filter: 'alpha(opacity=100)' !important;
}

.table-column-resize-marker {
	margin-left: 0px;
	margin-top: 0px;
	width: var(--btn-size);
	height: var(--btn-size);
	background-image: url('images/table-column-resize-marker.svg');
	background-size: 100% 100%;
	background-repeat: no-repeat;
	cursor: col-resize;
}

.table-column-resize-marker.hovered {
	margin-left: 0px;
	margin-top: 0px;
	width: var(--btn-size);
	height: var(--btn-size);
	background-image: url('images/table-column-resize-marker-hover.svg');
	background-size: 100% 100%;
	background-repeat: no-repeat;
}

.table-row-resize-marker {
	margin-left: 0px;
	margin-top: 0px;
	width: var(--btn-size);
	height: var(--btn-size);
	background-image: url('images/table-row-resize-marker.svg');
	background-size: 100% 100%;
	background-repeat: no-repeat;
}

.table-row-resize-marker.hovered {
	margin-left: 0px;
	margin-top: 0px;
	width: var(--btn-size);
	height: var(--btn-size);
	background-image: url('images/table-row-resize-marker-hover.svg');
	background-size: 100% 100%;
	background-repeat: no-repeat;
}

.table-select-marker {
	margin: 0px;
	width: var(--btn-size);
	height: var(--btn-size);
	background: url('images/table-row-or-column-select-marker.svg') no-repeat center center /12px;
}

.table-select-marker::before {
	content: '';
	position: absolute;
	z-index: 0;
}

.table-select-marker--column::before {
	bottom: 50%;
	border-bottom: 1px dashed lightgray;
	width: 100%;
}

.table-select-marker--row::before {
	left: 50%;
	border-left: 1px dashed lightgray;
	height: 100%;
}

.table-select-marker:hover {
	background: url('images/table-row-or-column-select-marker-selected.svg') no-repeat center center /12px;
}

.table-select-marker.hovered {
	background: url('images/table-row-or-column-select-marker-selected.svg') no-repeat center center /12px;
}

.table-select-marker:hover::before {
	border-color: var(--color-primary);
}

.table-move-marker {
	margin-left: 0px;
	margin-top: 0px;
	width: var(--btn-size);
	height: var(--btn-size);
	background-image: url('images/table-move-marker.svg');
	background-size: 100% 100%;
	background-repeat: no-repeat;
	cursor: move;
}

#presentation-controls-wrapper {
	background: var(--color-background-lighter);
	position: relative;
	border-top: 1px solid var(--color-border);
	display: none;
	overflow-y: auto;
	height: 100%;
}

#quickfind-dock-wrapper {
	display: none;
	position: relative;
	z-index: 990;
	max-width: 350px;
	height: 100%;
}

#sidebar-dock-wrapper, #navigator-dock-wrapper {
	display: none;
	background: var(--color-background-lighter);
	position: relative;
	overflow-x: hidden;
	z-index: 990;
	max-width: 350px;
	overflow-y: auto;
	scrollbar-width: var(--scrollbar-width);
	scrollbar-color: var(--scrollbar-color);
	height: 100%;
}

#sidebar-dock-wrapper.visible {
	display: block;
	/* synchronize time with Sidebar.ts setting focus */
	animation: 200ms ease-out appear-from-right;
	border-inline-start: 1px solid var(--color-border);
}

#aichat-dock-wrapper {
	display: none;
	background: var(--color-main-background);
	position: relative;
	overflow: hidden;
	z-index: 990;
	max-width: 350px;
	height: 100%;
}

#aichat-dock-wrapper.visible {
	display: block;
	animation: 200ms ease-out appear-from-right;
	border-inline-start: 1px solid var(--color-border);
}

@keyframes appear-from-right {
	from {
		transform: translateX(100%);
	}
	to {
		transform: translateX(0);
	}
}

.sidebar-panel {
	padding: 0px;
	margin: 0px;
	position: relative;
	width: auto;
	height: 100%;
	z-index: 1200;
}

.sidebar-panel::-webkit-scrollbar {
	width: 8px;
}

.sidebar-panel::-webkit-scrollbar-thumb {
	background-color: var(--color-border);
}

#toolbar-wrapper {
	table-layout: fixed;
	border-collapse: separate;
	border-spacing: 0;
	width: 100%;
	border-top: none;
	z-index: 11 !important;
	border-bottom: 1px solid var(--color-toolbar-border);
	background-color: var(--color-background-lighter);
	display: flex;
	flex-direction: column;
}
#toolbar-wrapper:not(.mobile) {
	padding: 2px 0;
}
/* Remove bottom padding in calc as it affects formulabar*/
#toolbar-wrapper.spreadsheet:not(.mobile) {
	padding-block-end: 0;
}

#toolbar-logo {
	width: 0;
}

/* Hide hamburger except on mobile phones */
#toolbar-hamburger {
	width: 0;
}

/* Hide back btn except on mobile phones */
#toolbar-mobile-back {
	width: 0;
}
/* ... */

